[package]
name = "soundkit-stream"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SoundKit v2 frame stream and sidecar index utilities."
repository = "https://github.com/wavey-ai/soundkit-stream"

[dependencies]
frame-header = { version = "0.2.1", path = "../../../frame-header" }
libopus-rs = { version = "0.0.2", path = "../../../libopus-rs" }
