[package]
name = "soundkit-store-worker"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Worker storage API for SoundKit v2 frame streams."
repository = "https://github.com/wavey-ai/soundkit-stream"
license = "MIT"
exclude = ["build/**"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
urlencoding = "2"
wasm-bindgen = "0.2"
worker = { version = "0.8.3", features = ["d1"] }
